--- a/app/src/main/res/layout/activity_location_parser.xml
+++ b/app/src/main/res/layout/activity_location_parser.xml
@@ -67,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onOpenWithPressed"
         android:text="@string/locationparser_button_open"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
